# propact

./: .gitignore  CHANGELOG.md  Makefile  README.md  README.md.backup  TODO.md  goal.yaml  planfile.yaml  pyproject.toml  report.md  sample_data.json  test_all_examples.sh  test_examples_final.sh  verify_examples.sh
.github/workflows/: ci.yml  docs.yml  release.yml
TODO/: Projekty, które realziuje, mają za zadanie algoryt.md  chodzi o stworzenie biblitoeki, ktora będzie dział.md  chodzi o stworzenie prostej alternatywy adresowane.md  podaj mozliwosci zastoswania oraz podaj jakie prot.md  stworz przyklady uzycia dla examples___z roznymi r.md  zaproponuj przydatne biblioteki python do stworzen.md  zdecydowalem sie na anzwe propact_stworz struktur.md  🏗️ __Implementacja konwersji w Propact__ (kod goto.md
docs/: README.md  api.md  error-handling.md  openapi-llm.md  security.md  semantic-matching.md  usage.md
examples/: Makefile  README.md  run-all.sh  run-new-examples.sh
examples/01-shell-upload/: README.md  run.sh
examples/02-openapi-rest/: README.md  openapi.json  run.sh
examples/03-mcp-tool/: README.md  run.sh
examples/04-ws-chat/: README.md  run.sh
examples/05-md-server/: README.md  run.sh  server.md
examples/05-security-hardening/: README.md  attack_samples.md  run.sh  secure_handler.py
examples/06-openai-vision/: README.md  openapi.json  run.sh
examples/07-ffmpeg-cli/: README.md  run.sh
examples/08-grpc-inference/: README.md  run.sh
examples/09-imgur/: README.md  run.sh
examples/10-slack/: README.md  run.sh  slack-openapi.json
examples/11-discord/: README.md  run.sh
examples/12-openai-vision/: README.md  run.sh
examples/13-github-gist/: README.md  README.response.md  run.sh
examples/14-stripe/: README.md  run.sh
examples/15-youtube/: README.md  run.sh
examples/16-notion/: README.md  run.sh
examples/17-twitter/: README.md  run.sh
examples/18-todo-api/: README.md  README.response.md  run.sh
examples/19-users-api/: README.md  README.response.md  run.sh
examples/20-posts-api/: README.md  README.response.md  run.sh
examples/21-albums-api/: README.md  run.sh
examples/22-comments-api/: README.md  README.response.md  run.sh
examples/23-photos-api/: README.md  README.response.md  run.sh
examples/dsl/01-sql-insert/: README.md
examples/dsl/02-graphql/: README.md
examples/dsl/03-csv-xml/: README.md
examples/error-demo/: README.md  README.response.md  ecommerce-api.json
examples/openapi-llm-demo/: README.md  notion-openapi.json
examples/public-apis/: README.md  demo-public.sh
examples/public-apis/01-weather/: README.md  README.response.md
examples/public-apis/02-currency/: README.md  README.response.md
examples/public-apis/03-stocks/: README.md  README.response.md
examples/public-apis/04-crypto/: README.md
examples/public-apis/05-newsapi.org/: README.md  README.response.md
examples/public-apis/06-restcountries.com/: README.md  README.response.md
examples/public-apis/07-ipapi.co/: README.md  README.response.md
examples/rest-ws-proxy/: README.md  README.response.md
examples/shell-to-mcp/: README.md
examples/smart-test/: README.md  README.response.md  openapi.json  test_matcher.py
project/: README.md  analysis.toon.yaml  calls.mmd  compact_flow.mmd  context.md  duplication.toon.yaml  evolution.toon.yaml  flow.mmd  index.html  map.toon.yaml  project.toon.yaml  prompt.txt  validation.toon.yaml
src/propact/: __init__.py  adapters.py  attachments.py  cli.py  config.py  constants.py  converter.py  core.py  dsl_converter.py  enhanced.py  error_handler.py  importer.py  llm_proxy.py  matcher.py  optimization.py  parser.py  query_gen.py  security.py  testing.py  uniconverter.py  validation.py
src/propact/protocols/: __init__.py  mcp.py  rest.py  shell.py  ws.py
tests/: __init__.py  test_core.py  test_error_handler.py  test_protocols.py
