[tool.poetry]
name = "propact"
version = "0.0.9"
description = "Protocol Pact: Universal Markdown for Shell/MCP/REST/WS"
authors = ["Tom Sapletta <tom@sapletta.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/wronai/propact"
packages = [{include = "propact", from = "src"}]

[tool.poetry.scripts]
propact = "propact.cli:cli"

[tool.poetry.dependencies]
python = "^3.10"
rich = "^13.7"
markdown = "^3.6"
pydantic = {extras = ["email"], version = "^2.8"}
httpx = "^0.27"
base64io = "^1.0"
click = "^8.1"
litellm = "^1.45.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
pytest-asyncio = "^0.21"
ruff = "^0.1"
mypy = "^1.7"

[tool.poetry.extras]
grpc = ["grpcio", "grpcio-tools"]
graphql = ["gql"]
mqtt = ["paho-mqtt"]
soap = ["zeep"]
pandoc = ["pypandoc"]
dotenv = ["python-dotenv"]
mcp = ["mcp-python-sdk"]
semantic = ["sentence-transformers", "numpy"]
security = ["bleach", "jsonschema", "Pillow", "markdown-it-py"]
dsl = ["sqlglot", "pandas", "PyYAML", "xmltodict", "markdown-table-generator"]
llm = ["litellm"]
uniconverter = ["markitdown", "weasyprint", "python-docx", "python-pptx", "openpyxl", "pypandoc", "html2text", "email-validator"]
all = ["grpcio", "grpcio-tools", "gql", "paho-mqtt", "zeep", "pypandoc", "python-dotenv", "mcp-python-sdk", "sentence-transformers", "numpy", "bleach", "jsonschema", "Pillow", "markdown-it-py", "sqlglot", "pandas", "PyYAML", "xmltodict", "markdown-table-generator", "markitdown", "weasyprint", "python-docx", "python-pptx", "openpyxl", "html2text", "email-validator"]

[tool.propact.llm]
default_provider = "local"

[tool.propact.llm.providers.local]
model = "ollama/llama3.2"
api_base = "http://localhost:11434"

[tool.propact.llm.providers.cloud]
model = "openai/gpt-4o-mini"
api_key = "{{ env OPENAI_API_KEY }}"

[tool.propact.llm.providers.groq]
model = "groq/llama3-70b-8192"
api_key = "{{ env GROQ_API_KEY }}"

[tool.propact.llm.providers.anthropic]
model = "anthropic/claude-3.5-sonnet"
api_key = "{{ env ANTHROPIC_API_KEY }}"

[tool.propact.llm.providers.openrouter]
model = "openrouter/openai/gpt-4o-mini"
api_key = "{{ env OPENROUTER_API_KEY }}"

[tool.propact.llm.providers.bedrock]
model = "bedrock/claude-3-haiku"
api_key = "{{ env AWS_ACCESS_KEY_ID }}"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py310"
include = ["src/**/*.py", "tests/**/*.py"]

[tool.ruff.lint]
select = ["E", "F", "B", "Q", "I", "N", "S", "T20"]
ignore = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
